# emotion_classification

./: .gitignore  README.md  dataset.py  model.py  pyproject.toml  test_stream_webcam.py  training.py
checkpoints/: model.pth
src/: custom_dataset_creation.py  dataset.py  fine_tuning.py  model.py  test_stream_webcam.py  training.py
